# expired_file_remover

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  pyproject.toml  sample.py  setup.cfg
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
docs/: dev_containers.md  docusaurus.config.js  package-lock.json  package.json  poetry_in_dev_container.md  sidebars.js
docs/docs/: intro.md
docs/src/components/: HomepageFeatures.js
docs/src/pages/: index.js
examples/: cleanup_old_files.py
src/expired_file_remover/: __init__.py  core.py
tests/: conftest.py  test_basic.py  test_edge_cases.py  test_filename_date.py
